--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <title>SW X-Wings</title>
 
-    <!-- styles -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
-
     <!-- data files -->
     <script src="data/ships/x_wing.js"></script>
     <script src="data/ships/tie_fighter.js"></script>
@@ -18,16 +15,13 @@
     <script src="src/scenes/LoadScene.js"></script>
     <script src="src/LabelButton.js"></script>
     <script src="src/IconButton.js"></script>
+    <script src="src/scenes/TitleScene.js"></script>
     <script src="src/scenes/MenuScene.js"></script>
     <script src="src/scenes/FleetScene.js"></script>
     <script src="src/scenes/GameScene.js"></script>
     <script src="src/main.js"></script>
 </head>
 <body>
-    <div class="font_preload" style="opacity: 0">
-        <span style="font-family: 'toy';"></span>
-        <span style="font-family: 'awkward';"></span>
-    </div>
     <div id="game"></div>
 </body>
 </html>
