fixed menu button bug

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="src/scenes/LoadScene.js"></script>
     <script src="src/LabelButton.js"></script>
     <script src="src/IconButton.js"></script>
+    <script src="src/MenuButton.js"></script>
     <script src="src/scenes/TitleScene.js"></script>
     <script src="src/scenes/MenuScene.js"></script>
     <script src="src/scenes/FleetScene.js"></script>
